--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,13 @@
     --font: 'Varela Round', sans-serif;
   }
 
+
+*, *::after, *::before {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 body {
     background-color: vaR(--background-color);
     color: var(--font-color);
@@ -46,17 +53,58 @@ h1 {
 
 .title {
     font-size: 100px;
+    text-align: center;
 }
 
 /* MAIN */
 
 .main {
     display: flex;
+    flex-direction: column;
     width: 100%;
     justify-content: center;
+    padding: 30px;
+}
+
+#message {
+    padding: 20px 0;
+    font-size: 50px;
+    text-align: center;
+}
+
+.gameboard {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 454px;
+    height: 454px;
+    border: 2px solid var(--border-color);
+    margin: 0px auto;
+    cursor: pointer;
+    text-align: center;
+}
+
+.field {
+    width: 150px;
+    height: 150px;
+    border: 1px solid var(--border-color);
+    background-color: var(--field-background-color);
+    font-size: 100px;
+    text-align: center;
+    cursor: pointer;
+    user-select: none;
+
+}
+
+.field:hover {
+    background-color: var(--field-background-color-hover);
 }
 
 /* RESTART BUTTON */
+
+.button {
+    display: flex;
+    justify-content: center;
+}
 
 #restart-button {
     padding: 10px 20px;
@@ -65,6 +113,7 @@ h1 {
     background-color: var(--button-background-color);
     color: var(--header-font-color);
     font-size: 50px;
+    margin: 30px;
 
 }
 
@@ -82,7 +131,7 @@ h1 {
     display: flex;
     justify-content: center;
     position: absolute;
-    bottom: 0;
+    bottom: 80px;
     width: 100%;
     padding: 10px;
     font-size: 20px;
